--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+}
+
+.handwrite {
+  font-family: "Just Me Again Down Here", serif;
 }
 
 .logo {
@@ -39,4 +43,17 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.animate-bgmove {
+  animation: bgmove 30s infinite;
+}
+
+@keyframes bgmove {
+  0% {
+    background-position: 0 1;
+  }
+  100% {
+    background-position: 0 100%;
+  }
 }
